--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "my-app",
+  "name": "velp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "date-fns": "^2.11.1",
-    "gray-matter": "^4.0.2",
-    "next": "^11.0.0",
+    "@chakra-ui/react": "^1.6.10",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "framer-motion": "^4.1.17",
+    "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "remark": "^12.0.0",
-    "remark-html": "^12.0.0"
+    "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.1",
+    "@types/react": "^17.0.30",
+    "eslint": "8.0.1",
+    "eslint-config-next": "11.1.2",
+    "typescript": "^4.4.4"
   }
 }
