--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@reduxjs/toolkit": "^1.6.2",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.30",
+    "@types/react-redux": "^7.1.20",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
+    "redux-devtools": "^3.7.0",
     "typescript": "^4.4.4"
   }
 }
