--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.30",
     "@types/react-redux": "^7.1.20",
+    "@types/uuid": "^8.3.3",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
     "redux-devtools": "^3.7.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "uuidv4": "^6.2.12"
   }
 }
